--- a/responsive.css
+++ b/responsive.css
@@ -27,10 +27,24 @@
         position: absolute;
         display: flex;
         flex-direction: column;
+        background-color: #96BB7C;
+        border-radius: 10px;
+        opacity: 0;
+        top: 80px;
+        padding: 10px;
     }
 
-    .Product:hover .dropdown {
+    .dropdown a:hover {
+        background-color: white;
+        color: black;
+        border-radius: 10px;
+    }
+
+    .site_nav ul li:hover .dropdown {
         visibility: visible;
+        opacity: 1;
+        top: 90px;
+        transition: all .2s ease-in-out;
     }
 
     .sec_dropdown {
@@ -39,10 +53,18 @@
         left: 70px;
         top: 10px;
         width: 100px;
+        opacity: 0;
+        background-color: #96BB7C;
+        border-radius: 10px;
+        padding: 10px;
     }
 
-    .open:hover .sec_dropdown {
+    .dropdown ul li:hover .sec_dropdown {
         visibility: visible;
+        transition: all .2s ease-in-out;
+        opacity: 1;
+        left: 79px;
+
     }
 
 
@@ -132,7 +154,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-
+        max-width: 200px;
     }
 
     .head {
@@ -149,6 +171,7 @@
     .site_nav ul li a {
         color: white;
         text-align: left;
+        display: flex;
     }
 
     .site_nav {
@@ -160,7 +183,8 @@
         left: -10px;
         overflow: auto;
         height: 250px;
-        width: 100%;
+        width: 200px;
+        padding: 10px;
     }
 
     #slid_menu:checked~.site_nav {
@@ -204,8 +228,28 @@
     }
 
     .site_nav ul li .blank_bttn {
-        background-color: black;
+        background-color: rgb(102, 0, 255);
         width: 125px;
+    }
+
+    .site_nav a:hover {
+        background-color: white;
+        color: black;
+        border-radius: 10px;
+    }
+    .dropdown a {
+        width: 150px;
+    }
+    .sec_dropdown a {
+        width: 100px;
+    }
+    .Product{
+        width: 150px;
+        justify-content: space-between;
+    }
+    .open{
+        width: 100px;
+        justify-content: space-between;
     }
 }
 
