--- a/responsive.css
+++ b/responsive.css
@@ -285,14 +285,19 @@
         object-fit: contain;
 
     }
-    
+    .intro_grid {
+        width: 240px;
+    }
+    .intro_grid.icon {
+        width: 30px;
+    }
     .ade_img {
         width: 100%;
     }
 
     .ade_img img {
         width: 100%;
-        height: 500px;
+        height: 400px;
     }
 
     .cart_details {
