--- a/responsive.css
+++ b/responsive.css
@@ -199,6 +199,7 @@
         background-color: #96BB7C;
         opacity: 0;
         left: -10px;
+        top: -500px;
         overflow: auto;
         height: 250px;
         width: 220px;
@@ -207,7 +208,7 @@
 
     #slid_menu:checked~.site_nav {
         visibility: visible;
-        transition: all .2s ease-in-out;
+        transition: left .2s ease-in-out;
         opacity: 1;
         left: 0px;
     }
